--- a/src/LoginStyles.css
+++ b/src/LoginStyles.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     height: calc(100vh - 350px);
-    padding: 2rem;
+    padding: 2rem;   
 }
 
 .login-paper {
@@ -18,6 +18,7 @@
 
 .login-field {
     border-radius: 8px;
+    background-color: darkgreen;
 }
 
 .login-button {
